QtBeef/src/Qt/qtextformat.bf

extension CQt
{
	[LinkName("QTextCharFormat_new")]
	public static extern QTextCharFormat_Ptr QTextCharFormat_new();
	[LinkName("QTextCharFormat_new2")]
	public static extern QTextCharFormat_Ptr QTextCharFormat_new2(void** param1);
	[LinkName("QTextCharFormat_Delete")]
	public static extern void QTextCharFormat_Delete(QTextCharFormat_Ptr self);
	[LinkName("QTextCharFormat_IsValid")]
	public static extern bool QTextCharFormat_IsValid(void* self);
	[LinkName("QTextCharFormat_SetFont")]
	public static extern void QTextCharFormat_SetFont(void* self, void** font);
	[LinkName("QTextCharFormat_Font")]
	public static extern void* QTextCharFormat_Font(void* self);
	[LinkName("QTextCharFormat_SetFontFamily")]
	public static extern void QTextCharFormat_SetFontFamily(void* self, libqt_string family);
	[LinkName("QTextCharFormat_FontFamily")]
	public static extern libqt_string QTextCharFormat_FontFamily(void* self);
	[LinkName("QTextCharFormat_SetFontFamilies")]
	public static extern void QTextCharFormat_SetFontFamilies(void* self, void** families);
	[LinkName("QTextCharFormat_FontFamilies")]
	public static extern void* QTextCharFormat_FontFamilies(void* self);
	[LinkName("QTextCharFormat_SetFontStyleName")]
	public static extern void QTextCharFormat_SetFontStyleName(void* self, libqt_string styleName);
	[LinkName("QTextCharFormat_FontStyleName")]
	public static extern void* QTextCharFormat_FontStyleName(void* self);
	[LinkName("QTextCharFormat_SetFontPointSize")]
	public static extern void QTextCharFormat_SetFontPointSize(void* self, double size);
	[LinkName("QTextCharFormat_FontPointSize")]
	public static extern double QTextCharFormat_FontPointSize(void* self);
	[LinkName("QTextCharFormat_SetFontWeight")]
	public static extern void QTextCharFormat_SetFontWeight(void* self, c_int weight);
	[LinkName("QTextCharFormat_FontWeight")]
	public static extern c_int QTextCharFormat_FontWeight(void* self);
	[LinkName("QTextCharFormat_SetFontItalic")]
	public static extern void QTextCharFormat_SetFontItalic(void* self, bool italic);
	[LinkName("QTextCharFormat_FontItalic")]
	public static extern bool QTextCharFormat_FontItalic(void* self);
	[LinkName("QTextCharFormat_SetFontCapitalization")]
	public static extern void QTextCharFormat_SetFontCapitalization(void* self, QFont_Capitalization capitalization);
	[LinkName("QTextCharFormat_FontCapitalization")]
	public static extern QFont_Capitalization QTextCharFormat_FontCapitalization(void* self);
	[LinkName("QTextCharFormat_SetFontLetterSpacingType")]
	public static extern void QTextCharFormat_SetFontLetterSpacingType(void* self, QFont_SpacingType letterSpacingType);
	[LinkName("QTextCharFormat_FontLetterSpacingType")]
	public static extern QFont_SpacingType QTextCharFormat_FontLetterSpacingType(void* self);
	[LinkName("QTextCharFormat_SetFontLetterSpacing")]
	public static extern void QTextCharFormat_SetFontLetterSpacing(void* self, double spacing);
	[LinkName("QTextCharFormat_FontLetterSpacing")]
	public static extern double QTextCharFormat_FontLetterSpacing(void* self);
	[LinkName("QTextCharFormat_SetFontWordSpacing")]
	public static extern void QTextCharFormat_SetFontWordSpacing(void* self, double spacing);
	[LinkName("QTextCharFormat_FontWordSpacing")]
	public static extern double QTextCharFormat_FontWordSpacing(void* self);
	[LinkName("QTextCharFormat_SetFontUnderline")]
	public static extern void QTextCharFormat_SetFontUnderline(void* self, bool underline);
	[LinkName("QTextCharFormat_FontUnderline")]
	public static extern bool QTextCharFormat_FontUnderline(void* self);
	[LinkName("QTextCharFormat_SetFontOverline")]
	public static extern void QTextCharFormat_SetFontOverline(void* self, bool overline);
	[LinkName("QTextCharFormat_FontOverline")]
	public static extern bool QTextCharFormat_FontOverline(void* self);
	[LinkName("QTextCharFormat_SetFontStrikeOut")]
	public static extern void QTextCharFormat_SetFontStrikeOut(void* self, bool strikeOut);
	[LinkName("QTextCharFormat_FontStrikeOut")]
	public static extern bool QTextCharFormat_FontStrikeOut(void* self);
	[LinkName("QTextCharFormat_SetUnderlineColor")]
	public static extern void QTextCharFormat_SetUnderlineColor(void* self, void** color);
	[LinkName("QTextCharFormat_UnderlineColor")]
	public static extern void* QTextCharFormat_UnderlineColor(void* self);
	[LinkName("QTextCharFormat_SetFontFixedPitch")]
	public static extern void QTextCharFormat_SetFontFixedPitch(void* self, bool fixedPitch);
	[LinkName("QTextCharFormat_FontFixedPitch")]
	public static extern bool QTextCharFormat_FontFixedPitch(void* self);
	[LinkName("QTextCharFormat_SetFontStretch")]
	public static extern void QTextCharFormat_SetFontStretch(void* self, c_int factor);
	[LinkName("QTextCharFormat_FontStretch")]
	public static extern c_int QTextCharFormat_FontStretch(void* self);
	[LinkName("QTextCharFormat_SetFontStyleHint")]
	public static extern void QTextCharFormat_SetFontStyleHint(void* self, QFont_StyleHint hint);
	[LinkName("QTextCharFormat_SetFontStyleStrategy")]
	public static extern void QTextCharFormat_SetFontStyleStrategy(void* self, QFont_StyleStrategy strategy);
	[LinkName("QTextCharFormat_FontStyleHint")]
	public static extern QFont_StyleHint QTextCharFormat_FontStyleHint(void* self);
	[LinkName("QTextCharFormat_FontStyleStrategy")]
	public static extern QFont_StyleStrategy QTextCharFormat_FontStyleStrategy(void* self);
	[LinkName("QTextCharFormat_SetFontHintingPreference")]
	public static extern void QTextCharFormat_SetFontHintingPreference(void* self, QFont_HintingPreference hintingPreference);
	[LinkName("QTextCharFormat_FontHintingPreference")]
	public static extern QFont_HintingPreference QTextCharFormat_FontHintingPreference(void* self);
	[LinkName("QTextCharFormat_SetFontKerning")]
	public static extern void QTextCharFormat_SetFontKerning(void* self, bool enable);
	[LinkName("QTextCharFormat_FontKerning")]
	public static extern bool QTextCharFormat_FontKerning(void* self);
	[LinkName("QTextCharFormat_SetUnderlineStyle")]
	public static extern void QTextCharFormat_SetUnderlineStyle(void* self, QTextCharFormat_UnderlineStyle style);
	[LinkName("QTextCharFormat_UnderlineStyle")]
	public static extern QTextCharFormat_UnderlineStyle QTextCharFormat_UnderlineStyle(void* self);
	[LinkName("QTextCharFormat_SetVerticalAlignment")]
	public static extern void QTextCharFormat_SetVerticalAlignment(void* self, QTextCharFormat_VerticalAlignment alignment);
	[LinkName("QTextCharFormat_VerticalAlignment")]
	public static extern QTextCharFormat_VerticalAlignment QTextCharFormat_VerticalAlignment(void* self);
	[LinkName("QTextCharFormat_SetTextOutline")]
	public static extern void QTextCharFormat_SetTextOutline(void* self, void** pen);
	[LinkName("QTextCharFormat_TextOutline")]
	public static extern void* QTextCharFormat_TextOutline(void* self);
	[LinkName("QTextCharFormat_SetToolTip")]
	public static extern void QTextCharFormat_SetToolTip(void* self, libqt_string tip);
	[LinkName("QTextCharFormat_ToolTip")]
	public static extern libqt_string QTextCharFormat_ToolTip(void* self);
	[LinkName("QTextCharFormat_SetSuperScriptBaseline")]
	public static extern void QTextCharFormat_SetSuperScriptBaseline(void* self, double baseline);
	[LinkName("QTextCharFormat_SuperScriptBaseline")]
	public static extern double QTextCharFormat_SuperScriptBaseline(void* self);
	[LinkName("QTextCharFormat_SetSubScriptBaseline")]
	public static extern void QTextCharFormat_SetSubScriptBaseline(void* self, double baseline);
	[LinkName("QTextCharFormat_SubScriptBaseline")]
	public static extern double QTextCharFormat_SubScriptBaseline(void* self);
	[LinkName("QTextCharFormat_SetBaselineOffset")]
	public static extern void QTextCharFormat_SetBaselineOffset(void* self, double baseline);
	[LinkName("QTextCharFormat_BaselineOffset")]
	public static extern double QTextCharFormat_BaselineOffset(void* self);
	[LinkName("QTextCharFormat_SetAnchor")]
	public static extern void QTextCharFormat_SetAnchor(void* self, bool anchor);
	[LinkName("QTextCharFormat_IsAnchor")]
	public static extern bool QTextCharFormat_IsAnchor(void* self);
	[LinkName("QTextCharFormat_SetAnchorHref")]
	public static extern void QTextCharFormat_SetAnchorHref(void* self, libqt_string value);
	[LinkName("QTextCharFormat_AnchorHref")]
	public static extern libqt_string QTextCharFormat_AnchorHref(void* self);
	[LinkName("QTextCharFormat_SetAnchorNames")]
	public static extern void QTextCharFormat_SetAnchorNames(void* self, void** names);
	[LinkName("QTextCharFormat_AnchorNames")]
	public static extern void* QTextCharFormat_AnchorNames(void* self);
	[LinkName("QTextCharFormat_SetTableCellRowSpan")]
	public static extern void QTextCharFormat_SetTableCellRowSpan(void* self, c_int tableCellRowSpan);
	[LinkName("QTextCharFormat_TableCellRowSpan")]
	public static extern c_int QTextCharFormat_TableCellRowSpan(void* self);
	[LinkName("QTextCharFormat_SetTableCellColumnSpan")]
	public static extern void QTextCharFormat_SetTableCellColumnSpan(void* self, c_int tableCellColumnSpan);
	[LinkName("QTextCharFormat_TableCellColumnSpan")]
	public static extern c_int QTextCharFormat_TableCellColumnSpan(void* self);
	[LinkName("QTextCharFormat_SetFont2")]
	public static extern void QTextCharFormat_SetFont2(void* self, void** font, QTextCharFormat_FontPropertiesInheritanceBehavior behavior);
	[LinkName("QTextCharFormat_SetFontStyleHint2")]
	public static extern void QTextCharFormat_SetFontStyleHint2(void* self, QFont_StyleHint hint, QFont_StyleStrategy strategy);
}
